Remove extra authorization param from swagger output
